# SyncNest

./: README.md  architecture.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/database/: mongodb.py
backend/app/middleware/: auth_middleware.py
backend/app/models/: project.py  task.py  user.py
backend/app/routes/: auth.py  dashboard.py  projects.py  tasks.py  tenants.py
backend/app/schemas/: project_schema.py  task_schema.py  tenant_schema.py  user_schema.py
backend/app/services/: auth_service.py  dashboard_service.py  notification_service.py  project_service.py  task_service.py  tenant_service.py  user_service.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/Auth/: AcceptInvite.jsx  Login.jsx  Signup.jsx  TenantSetup.jsx
frontend/src/components/Dashboard/: Dashboard.jsx
frontend/src/components/Layout/: Layout.jsx  ProtectedRoute.jsx
frontend/src/components/Projects/: ProjectDetails.jsx  ProjectList.jsx
frontend/src/components/Public/: Landing.jsx
frontend/src/context/: useAuthStore.js
frontend/src/services/: api.js  authService.js  projectService.js  taskService.js  tenantService.js
